<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Home"
    android:orientation="vertical"
    android:weightSum="9"
    android:baselineAligned="false"
    android:background="#21252B"
    >

    <GridLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_weight="8"
        android:columnOrderPreserved="false"
        android:alignmentMode="alignMargins"
        android:rowCount="3"
        android:columnCount="2"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/cardVisitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardPreventCornerOverlap="true"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp"
            android:onClick="gotoDetails"
            >
            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:gravity="center"
                android:padding="16dp"
                android:orientation="vertical"
                >
                <ImageView
                    android:src="@drawable/visitor"
                    android:contentDescription="@string/visitor"
                    android:layout_width="80dp"
                    android:layout_height="80dp"/>
                <TextView
                    android:id="@+id/tvVisitor"
                    android:textColor="#03A87C"
                    android:textStyle="bold"
                    android:text="@string/visitor"
                    android:textSize="20sp"
                    android:layout_marginTop="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardEmployee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardPreventCornerOverlap="true"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp"
            android:onClick="gotoDetails"
            >
            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:gravity="center"
                android:padding="16dp"
                android:orientation="vertical"
                >
                <ImageView
                    android:src="@drawable/employees"
                    android:contentDescription="@string/employee"
                    android:layout_width="80dp"
                    android:layout_height="80dp"/>
                <TextView
                    android:id="@+id/tvEmployee"
                    android:textColor="#03A87C"
                    android:textStyle="bold"
                    android:text="@string/employee"
                    android:textSize="20sp"
                    android:layout_marginTop="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardPreventCornerOverlap="true"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp"
            android:onClick="gotoDetails"
            >
            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:gravity="center"
                android:padding="16dp"
                android:orientation="vertical"
                >
                <ImageView
                    android:src="@drawable/admin"
                    android:contentDescription="@string/Admin"
                    android:layout_width="80dp"
                    android:layout_height="80dp"/>
                <TextView
                    android:id="@+id/tvAdmin"
                    android:textColor="#03A87C"
                    android:textStyle="bold"
                    android:text="@string/admin"
                    android:textSize="20sp"
                    android:layout_marginTop="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardPreventCornerOverlap="true"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp"
            android:onClick="gotoDetails"
            >
            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:gravity="center"
                android:padding="16dp"
                android:orientation="vertical"
                >
                <ImageView
                    android:src="@drawable/login1"
                    android:contentDescription="@string/login"
                    android:layout_width="80dp"
                    android:layout_height="80dp"/>
                <TextView
                    android:id="@+id/tvlogin"
                    android:textColor="#03A87C"
                    android:textStyle="bold"
                    android:text="@string/login"
                    android:textSize="20sp"
                    android:layout_marginTop="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardPreventCornerOverlap="true"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp"
            android:onClick="gotoDetails"
            >
            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:gravity="center"
                android:padding="16dp"
                android:orientation="vertical"
                >
                <ImageView
                    android:src="@drawable/location"
                    android:contentDescription="@string/location"
                    android:layout_width="80dp"
                    android:layout_height="80dp"/>
                <TextView
                    android:id="@+id/tvLocation"
                    android:textColor="#03A87C"
                    android:textStyle="bold"
                    android:text="@string/location"
                    android:textSize="20sp"
                    android:layout_marginTop="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>
</LinearLayout>